# htmx-fastapi-service

./: .dockerignore  .flake8  .gitignore  ARCHITECTURE_REPORT.md  Dockerfile  Dockerfile.test  LICENSE  README.md  README.md.backup  database.py  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  messages.duckdb.wal  messages.py  models.py  nginx.conf  pyproject.toml  test_database.py  test_messages.py
.github/: README.md
.github/workflows/: docker-build.yml  docker-publish-ghcr.yml  docker-test.yml  security-scan.yml  status-badge.yml
k8s/: README.md  cleanup.sh  configmap.yaml  deploy.sh  deployment.yaml  ingress.yaml  namespace.yaml  service-nodeport.yaml  service.yaml
static/css/: style.css
static/js/: login.js  timezone.js
templates/: index.html  login_error.html  login_success.html  message_partial.html  messages_list.html  msgs.html
